# caflou-cli

./: DISCLAIMER.md  LICENSE  README.md  main.py  pyproject.toml
.claude-plugin/: marketplace.json
caflou_cli/: api.py  cache.py  config.py  main.py  output.py
caflou_cli/commands/: _common.py  _context.py  auth.py  comment.py  company.py  contact.py  document.py  invoice.py  masterdata.py  project.py  task.py  timesheet.py  transfer.py
docs/: ARCHITECTURE.md  DATAMODEL.md  FILTERING.md  ROADMAP.md  WEB_APP_REQUESTS_ANALYSIS.md  caflou_api.json
skills/.claude-plugin/: plugin.json
skills/caflou/: REFERENCE.md  SKILL.md
tests/: conftest.py  fake_client.py  test_comment.py  test_common.py  test_company.py  test_contact.py  test_context.py  test_document.py  test_find.py  test_project.py  test_task.py  test_timesheet.py  test_transfer.py
