[project]
name = "caflou-cli"
version = "0.1.0"
description = "CLI tool for the Caflou project management API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
]

[project.scripts]
caflou = "caflou_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
